--- a/src/app/tests/suites/certification/Test_TC_MF_1_12.yaml
+++ b/src/app/tests/suites/certification/Test_TC_MF_1_12.yaml
@@ -24,6 +24,7 @@ config:
 
 tests:
     - label: "TH_CR2 starts a commissioning process with TH_CE"
+      PICS: PICS_MF
       verification: |
           "1. Provision the device using 2nd controller chip tool on the raspi (use above instructions)
       disabled: true
@@ -31,15 +32,16 @@ tests:
     - label:
           "TH_CR2 opens a commissioning window on TH_CE using a commissioning
           timeout of PIXIT_COMM_WIN seconds using BCM"
+      PICS: PICS_MF
       verification: |
           On the 2nd controller using chip tool, open commissioning window using BCM
 
-          ./chip-tool administratorcommissioning open-basic-commissioning-window 500 2 0 --timedInteractionTimeoutMs 1000
+          ./chip-tool administratorcommissioning open-basic-commissioning-window 500 2 0 --timedInteractionTimeoutMs 1000 
 
 
           CHIP:DMG: InvokeResponseMessage =
           [1650278416.248379][11064:11069] CHIP:DMG: {
-          [1650278416.248436][11064:11069] CHIP:DMG:         suppressResponse = false,
+          [1650278416.248436][11064:11069] CHIP:DMG:         suppressResponse = false, 
           [1650278416.248495][11064:11069] CHIP:DMG:         InvokeResponseIBs =
           [1650278416.248570][11064:11069] CHIP:DMG:         [
           [1650278416.248630][11064:11069] CHIP:DMG:                 InvokeResponseIB =
@@ -52,18 +54,18 @@ tests:
           [1650278416.249186][11064:11069] CHIP:DMG:                                         ClusterId = 0x3c,
           [1650278416.249268][11064:11069] CHIP:DMG:                                         CommandId = 0x1,
           [1650278416.249347][11064:11069] CHIP:DMG:                                 },
-          [1650278416.249430][11064:11069] CHIP:DMG:
+          [1650278416.249430][11064:11069] CHIP:DMG:                                 
           [1650278416.249501][11064:11069] CHIP:DMG:                                 StatusIB =
           [1650278416.249581][11064:11069] CHIP:DMG:                                 {
           [1650278416.249664][11064:11069] CHIP:DMG:                                         status = 0x00 (SUCCESS),
           [1650278416.249738][11064:11069] CHIP:DMG:                                 },
-          [1650278416.249823][11064:11069] CHIP:DMG:
+          [1650278416.249823][11064:11069] CHIP:DMG:                                 
           [1650278416.249889][11064:11069] CHIP:DMG:                         },
-          [1650278416.249969][11064:11069] CHIP:DMG:
+          [1650278416.249969][11064:11069] CHIP:DMG:                         
           [1650278416.250035][11064:11069] CHIP:DMG:                 },
-          [1650278416.250113][11064:11069] CHIP:DMG:
+          [1650278416.250113][11064:11069] CHIP:DMG:                 
           [1650278416.250169][11064:11069] CHIP:DMG:         ],
-          [1650278416.250241][11064:11069] CHIP:DMG:
+          [1650278416.250241][11064:11069] CHIP:DMG:         
           [1650278416.250298][11064:11069] CHIP:DMG:         InteractionModelRevision = 1
           [1650278416.250355][11064:11069] CHIP:DMG: },
           [1650278416.250535][11064:11069] CHIP:DMG: Received Command Response Status for Endpoint=0 Cluster=0x0000_003C Command=0x0000_0001 Status=0x0
@@ -73,10 +75,11 @@ tests:
     - label:
           "Set up a DUT_CR1 to start attempting to do PASE to TH_CE and failing
           20 times. This can be done using an invalid passcode"
+      PICS: PICS_MF
       verification: |
-          On 2nd controller, using chip-tool connect using wrong passcode. Repeat the step for 20 times.
+          On 2nd controller, using chip-tool connect using wrong passcode. Repeat the step for 20 times. 
 
-          ./chip-tool pairing onnetwork 1 20202019  (With wrong passcode)
+          ./chip-tool pairing onnetwork 1 20202019 --timeout 3  (With wrong passcode)
 
           verify you got the following message in the TH log
           CHIP:SC: PASESession timed out while waiting for a response from the peer. Expected message type was 33
@@ -87,8 +90,9 @@ tests:
     - label:
           "DUT_CR1 starts a 21st commissioning process using a commissioning
           timeout of PIXIT_COMM_WIN seconds using BCM"
+      PICS: PICS_MF
       verification: |
-          On 2nd controller, using chip tool connect using correct passcode.
+          On 2nd controller, using chip tool connect using correct passcode.  
 
           ./chip-tool pairing onnetwork 1 20202021 (correct passcode)
 
@@ -101,8 +105,9 @@ tests:
     - label:
           "TH_CR3 starts a commissioning process with TH_CE using the correct
           PAKEVerifier"
+      PICS: PICS_MF
       verification: |
-          1. On 3rd controller using chip-tool connect using correct passcode
+          1. On 3rd controller using chip-tool connect using correct passcode 
 
           ./chip-tool pairing onnetwork 1 20202021
 
