--- a/src/app/tests/suites/certification/Test_TC_MF_1_25.yaml
+++ b/src/app/tests/suites/certification/Test_TC_MF_1_25.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    22.1.25. [TC-MF-1.25] Open commissioning window - durations max and max+1
+    24.1.25. [TC-MF-1.25] Open commissioning window - durations max and max+1
     [BCM] [DUT - Commissionee]
 
 config:
@@ -24,31 +24,34 @@ config:
 
 tests:
     - label: "Reset DUT_CE to factory defaults"
+      PICS: PICS_MF
       verification: |
 
       disabled: true
 
     - label: "TH_CR1 starts a commissioning process with DUT_CE using BCM"
+      PICS: PICS_MF
       verification: |
-          "1. Provision the device using 1st controller chip tool(use above instructions) ,
+          "1. Provision the device using 1st controller chip tool(use above instructions) , 
           "
       disabled: true
 
     - label:
           "TH_CR1 opens a commissioning window on DUT_CE with a value of 900
           seconds"
+      PICS: PICS_MF
       verification: |
           On 1st controller chip tool, open commissioning window
 
           For BCM,
 
 
-          ./chip-tool administratorcommissioning open-basic-commissioning-window 900 2 0 --timedInteractionTimeoutMs 1000
+          ./chip-tool administratorcommissioning open-basic-commissioning-window 900 2 0 --timedInteractionTimeoutMs 1000 
 
 
           CHIP:DMG: InvokeResponseMessage =
           [1650278416.248379][11064:11069] CHIP:DMG: {
-          [1650278416.248436][11064:11069] CHIP:DMG:         suppressResponse = false,
+          [1650278416.248436][11064:11069] CHIP:DMG:         suppressResponse = false, 
           [1650278416.248495][11064:11069] CHIP:DMG:         InvokeResponseIBs =
           [1650278416.248570][11064:11069] CHIP:DMG:         [
           [1650278416.248630][11064:11069] CHIP:DMG:                 InvokeResponseIB =
@@ -61,18 +64,18 @@ tests:
           [1650278416.249186][11064:11069] CHIP:DMG:                                         ClusterId = 0x3c,
           [1650278416.249268][11064:11069] CHIP:DMG:                                         CommandId = 0x1,
           [1650278416.249347][11064:11069] CHIP:DMG:                                 },
-          [1650278416.249430][11064:11069] CHIP:DMG:
+          [1650278416.249430][11064:11069] CHIP:DMG:                                 
           [1650278416.249501][11064:11069] CHIP:DMG:                                 StatusIB =
           [1650278416.249581][11064:11069] CHIP:DMG:                                 {
           [1650278416.249664][11064:11069] CHIP:DMG:                                         status = 0x00 (SUCCESS),
           [1650278416.249738][11064:11069] CHIP:DMG:                                 },
-          [1650278416.249823][11064:11069] CHIP:DMG:
+          [1650278416.249823][11064:11069] CHIP:DMG:                                 
           [1650278416.249889][11064:11069] CHIP:DMG:                         },
-          [1650278416.249969][11064:11069] CHIP:DMG:
+          [1650278416.249969][11064:11069] CHIP:DMG:                         
           [1650278416.250035][11064:11069] CHIP:DMG:                 },
-          [1650278416.250113][11064:11069] CHIP:DMG:
+          [1650278416.250113][11064:11069] CHIP:DMG:                 
           [1650278416.250169][11064:11069] CHIP:DMG:         ],
-          [1650278416.250241][11064:11069] CHIP:DMG:
+          [1650278416.250241][11064:11069] CHIP:DMG:         
           [1650278416.250298][11064:11069] CHIP:DMG:         InteractionModelRevision = 1
           [1650278416.250355][11064:11069] CHIP:DMG: },
           [1650278416.250535][11064:11069] CHIP:DMG: Received Command Response Status for Endpoint=0 Cluster=0x0000_003C Command=0x0000_0001 Status=0x0
@@ -80,12 +83,14 @@ tests:
       disabled: true
 
     - label: "Wait for commissioning Window to 901 seconds"
+      PICS: PICS_MF
       verification: |
           Wait for commissioning Window to Timeout
       disabled: true
 
     - label:
           "TH_CR1 reads the window status to verify the DUT_CE window is closed"
+      PICS: PICS_MF
       verification: |
           ./chip-tool administratorcommissioning read window-status 1 0
 
@@ -97,11 +102,12 @@ tests:
     - label:
           "TH_CR1 opens a commissioning window on DUT_CE with a value of 901
           seconds"
+      PICS: PICS_MF
       verification: |
           On 1st controller chip tool, open commissioning window
 
           For BCM,
-          ./chip-tool administratorcommissioning open-basic-commissioning-window 901 2 0 --timedInteractionTimeoutMs 1000
+          ./chip-tool administratorcommissioning open-basic-commissioning-window 901 2 0 --timedInteractionTimeoutMs 1000 
 
           CHIP:DMG: Received Command Response Status for Endpoint=0 Cluster=0x0000_003C Command=0x0000_0001 Status=0x85
           [1652860801.225084][9512:9517] CHIP:TOO: Error: IM Error 0x00000585: General error: 0x85 (INVALID_COMMAND)
@@ -111,6 +117,7 @@ tests:
 
     - label:
           "TH_CR1 reads the window status to verify the DUT_CE window is closed"
+      PICS: PICS_MF
       verification: |
           ./chip-tool administratorcommissioning read window-status 1 0
 
