--- a/src/app/tests/suites/certification/Test_TC_UL_3_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_UL_3_1.yaml
@@ -14,8 +14,8 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    3.4. [TC-UL-2.2]Read and Write Unit Localization Cluster Attributes [DUT as
-    Server]
+    103.3.1. [TC-UL-3.1] Read and Write Unit Localization Cluster Attributes
+    [DUT as Server]
 
 config:
     nodeId: 0x12344321
@@ -24,6 +24,7 @@ config:
 
 tests:
     - label: "TH reads TemperatureUnit attribute from DUT"
+      PICS: LUNIT.S.A0000
       verification: |
           ./chip-tool unitlocalization read temperature-unit 1 0
           [1651186538224] [11210:117238] CHIP: [TOO] Endpoint: 0 Cluster: 0x0000_002D Attribute 0x0000_0000 DataVersion: 486381485
@@ -31,6 +32,7 @@ tests:
       disabled: true
 
     - label: "TH writes 0 to TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000.Fahrenheit
       verification: |
           ./chip-tool unitlocalization write temperature-unit 0 1 0
           [1651191017267] [13215:170815] CHIP: [DMG] WriteResponseMessage =
@@ -45,20 +47,21 @@ tests:
           [1651191017267] [13215:170815] CHIP: [DMG]                                 Cluster = 0x2d,
           [1651191017267] [13215:170815] CHIP: [DMG]                                 Attribute = 0x0000_0000,
           [1651191017267] [13215:170815] CHIP: [DMG]                         }
-          [1651191017267] [13215:170815] CHIP: [DMG]
+          [1651191017267] [13215:170815] CHIP: [DMG]                                 
           [1651191017267] [13215:170815] CHIP: [DMG]                         StatusIB =
           [1651191017267] [13215:170815] CHIP: [DMG]                         {
           [1651191017267] [13215:170815] CHIP: [DMG]                                 status = 0x00 (SUCCESS),
           [1651191017267] [13215:170815] CHIP: [DMG]                         },
-          [1651191017267] [13215:170815] CHIP: [DMG]
+          [1651191017267] [13215:170815] CHIP: [DMG]                         
           [1651191017267] [13215:170815] CHIP: [DMG]                 },
-          [1651191017267] [13215:170815] CHIP: [DMG]
+          [1651191017267] [13215:170815] CHIP: [DMG]                 
           [1651191017267] [13215:170815] CHIP: [DMG]         ],
-          [1651191017267] [13215:170815] CHIP: [DMG]
+          [1651191017267] [13215:170815] CHIP: [DMG]         
           [1651191017267] [13215:170815] CHIP: [DMG]         InteractionModelRevision = 1
       disabled: true
 
     - label: "TH reads TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000
       verification: |
           ./chip-tool unitlocalization read temperature-unit 1 0
           [1651190135534] [12868:159849] CHIP: [TOO] Endpoint: 0 Cluster: 0x0000_002D Attribute 0x0000_0000 DataVersion: 486381486
@@ -66,6 +69,7 @@ tests:
       disabled: true
 
     - label: "TH writes 1 to TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000.Celsius
       verification: |
           ./chip-tool unitlocalization write temperature-unit 1 1 0
 
@@ -81,21 +85,22 @@ tests:
           [1651190221003] [12900:161139] CHIP: [DMG]                                 Cluster = 0x2d,
           [1651190221003] [12900:161139] CHIP: [DMG]                                 Attribute = 0x0000_0000,
           [1651190221003] [12900:161139] CHIP: [DMG]                         }
-          [1651190221003] [12900:161139] CHIP: [DMG]
+          [1651190221003] [12900:161139] CHIP: [DMG]                                 
           [1651190221003] [12900:161139] CHIP: [DMG]                         StatusIB =
           [1651190221003] [12900:161139] CHIP: [DMG]                         {
           [1651190221003] [12900:161139] CHIP: [DMG]                                 status = 0x00 (SUCCESS),
           [1651190221003] [12900:161139] CHIP: [DMG]                         },
-          [1651190221003] [12900:161139] CHIP: [DMG]
+          [1651190221003] [12900:161139] CHIP: [DMG]                         
           [1651190221003] [12900:161139] CHIP: [DMG]                 },
-          [1651190221003] [12900:161139] CHIP: [DMG]
+          [1651190221003] [12900:161139] CHIP: [DMG]                 
           [1651190221003] [12900:161139] CHIP: [DMG]         ],
-          [1651190221003] [12900:161139] CHIP: [DMG]
+          [1651190221003] [12900:161139] CHIP: [DMG]         
           [1651190221003] [12900:161139] CHIP: [DMG]         InteractionModelRevision = 1
           [1651190221003] [12900:161139] CHIP: [DMG] }
       disabled: true
 
     - label: "TH reads TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000
       verification: |
           ./chip-tool unitlocalization read temperature-unit 1 0
           [1651190800434] [13122:167909] CHIP: [TOO] Endpoint: 0 Cluster: 0x0000_002D Attribute 0x0000_0000 DataVersion: 486381489
@@ -103,6 +108,7 @@ tests:
       disabled: true
 
     - label: "TH writes 2 to TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000.Kelvin
       verification: |
           ./chip-tool unitlocalization write temperature-unit 2 1 0
           [1651190829573] [13133:168303] CHIP: [DMG] WriteResponseMessage =
@@ -117,23 +123,30 @@ tests:
           [1651190829573] [13133:168303] CHIP: [DMG]                                 Cluster = 0x2d,
           [1651190829573] [13133:168303] CHIP: [DMG]                                 Attribute = 0x0000_0000,
           [1651190829573] [13133:168303] CHIP: [DMG]                         }
-          [1651190829573] [13133:168303] CHIP: [DMG]
+          [1651190829573] [13133:168303] CHIP: [DMG]                                 
           [1651190829573] [13133:168303] CHIP: [DMG]                         StatusIB =
           [1651190829573] [13133:168303] CHIP: [DMG]                         {
           [1651190829573] [13133:168303] CHIP: [DMG]                                 status = 0x00 (SUCCESS),
           [1651190829573] [13133:168303] CHIP: [DMG]                         },
-          [1651190829573] [13133:168303] CHIP: [DMG]
+          [1651190829573] [13133:168303] CHIP: [DMG]                         
           [1651190829573] [13133:168303] CHIP: [DMG]                 },
-          [1651190829573] [13133:168303] CHIP: [DMG]
+          [1651190829573] [13133:168303] CHIP: [DMG]                 
           [1651190829573] [13133:168303] CHIP: [DMG]         ],
-          [1651190829573] [13133:168303] CHIP: [DMG]
+          [1651190829573] [13133:168303] CHIP: [DMG]         
           [1651190829573] [13133:168303] CHIP: [DMG]         InteractionModelRevision = 1
           [1651190829573] [13133:168303] CHIP: [DMG] }
       disabled: true
 
     - label: "TH reads TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000
       verification: |
           ./chip-tool unitlocalization read temperature-unit 1 0
           [1651190908005] [13164:169492] CHIP: [TOO] Endpoint: 0 Cluster: 0x0000_002D Attribute 0x0000_0000 DataVersion: 486381490
           [1651190908005] [13164:169492] CHIP: [TOO]   TemperatureUnit: 2
+      disabled: true
+
+    - label: "TH writes 5 to TemperatureUnit attribute"
+      PICS: LUNIT.C.A0000
+      verification: |
+          Verify that the write request fails with 0x87 (Constraint Error)
       disabled: true
