--- a/examples/light-switch-app/efr32/BUILD.gn
+++ b/examples/light-switch-app/efr32/BUILD.gn
@@ -325,9 +325,7 @@ efr32_executable("light_switch_app") {
 
   # Attestation Credentials
   if (chip_build_device_attestation_credentials) {
-    deps += [
-      "${examples_plat_dir}:efr32-attestation-credentials",
-    ]
+    deps += [ "${examples_plat_dir}:efr32-attestation-credentials" ]
   }
 
   output_dir = root_out_dir
