--- a/examples/window-app/efr32/BUILD.gn
+++ b/examples/window-app/efr32/BUILD.gn
@@ -281,9 +281,7 @@ efr32_executable("window_app") {
 
   # Attestation Credentials
   if (chip_build_device_attestation_credentials) {
-    deps += [
-      "${examples_plat_dir}:efr32-attestation-credentials",
-    ]
+    deps += [ "${examples_plat_dir}:efr32-attestation-credentials" ]
   }
 }
 
