--- a/.github/workflows/examples-linux-imx.yaml
+++ b/.github/workflows/examples-linux-imx.yaml
@@ -31,7 +31,7 @@ jobs:
         if: github.actor != 'restyled-io[bot]'
 
         container:
-            image: connectedhomeip/chip-build-imx:0.5.79
+            image: connectedhomeip/chip-build-imx:0.5.84
 
         steps:
             - uses: Wandalen/wretry.action@v1.0.15
@@ -53,15 +53,15 @@ jobs:
             - name: Build chip-tool
               timeout-minutes: 30
               run: |
+                  IMX_SDK_ROOT=/opt/fsl-imx-xwayland/5.15-kirkstone \
                   ./scripts/examples/imxlinux_example.sh \
                   examples/chip-tool examples/chip-tool/out/aarch64
             - name: Build thermostat
               timeout-minutes: 30
               run: |
-                  ./scripts/run_in_build_env.sh \
-                     "./scripts/build/build_examples.py \
-                        --target imx-thermostat build \
-                     "
+                  IMX_SDK_ROOT=/opt/fsl-imx-wayland/5.15-kirkstone \
+                  ./scripts/examples/imxlinux_example.sh \
+                  examples/thermostat/linux examples/thermostat/linux/out/arm
             - name: Build all-cluster
               timeout-minutes: 30
               run: |
@@ -73,13 +73,15 @@ jobs:
               timeout-minutes: 30
               run: |
                   ./scripts/run_in_build_env.sh \
-                     "./scripts/build/build_examples.py \
+                     "IMX_SDK_ROOT=/opt/fsl-imx-xwayland/5.15-kirkstone \
+                         ./scripts/build/build_examples.py \
                          --target imx-all-clusters-minimal-app build \
                      "
             - name: Build ota-provider-app
               timeout-minutes: 30
               run: |
                   ./scripts/run_in_build_env.sh \
-                     "./scripts/build/build_examples.py \
+                     "IMX_SDK_ROOT=/opt/fsl-imx-wayland/5.15-kirkstone \
+                         ./scripts/build/build_examples.py \
                          --target imx-ota-provider-app build
                      "
